# ospf-cpp

./: .gitignore  CMakeLists.txt  README.md  README_ch.md  daily.md  vcpkg.json
modules/base/: CMakeLists.txt
modules/base/include/ospf/base/: basic_definition.hpp  bytes.hpp  chunked_collection.hpp  collection.hpp  container.hpp  error.hpp  indexed_type.hpp  log.hpp  memory.hpp  meta_programming.hpp  parallelism.hpp  string_utils.hpp
modules/base/include/ospf/base/concepts/: base.hpp  container.hpp  copy_faster.hpp  enum.hpp  with_default.hpp  with_tag.hpp
modules/base/include/ospf/base/data_structure/: data_table.hpp  optional_array.hpp  pointer_array.hpp  reference_array.hpp  store_type.hpp  tagged_map.hpp  value_or_reference_array.hpp
modules/base/include/ospf/base/error/: code.hpp  error.hpp  ex_error.hpp  lazy_error.hpp
modules/base/include/ospf/base/functional/: either.hpp  ex_result.hpp  integer_iterator.hpp  iterator.hpp  optional.hpp  range_bounds.hpp  result.hpp
modules/base/include/ospf/base/serialization/: bytes.hpp  csv.hpp  json.hpp
modules/base/tests/: test_error_result.cpp  test_utils.cpp
modules/core/: CMakeLists.txt
modules/core/include/ospf/core/: model.hpp  solver.hpp  symbol.hpp  variable.hpp
modules/core/include/ospf/core/model/: abstract_linear_meta_model.hpp  aggregation.hpp  basic_model.hpp  configuration.hpp  constraint.hpp  context.hpp  expression_registry.hpp  mechanism.hpp  meta_model.hpp  model_builder.hpp  model_config.hpp  model_state.hpp  object.hpp  objective.hpp  pipeline.hpp  range_cache.hpp  registration.hpp  result_extractor.hpp  shadow_price.hpp  status.hpp  value_cache.hpp  variable_registry.hpp
modules/core/include/ospf/core/solver/: backend.hpp  config.hpp  heuristic.hpp  solve_result.hpp  solver.hpp  solver_builder.hpp  solver_config.hpp  solver_ext.hpp  solver_output.hpp  solver_state.hpp  solver_trait.hpp
modules/core/include/ospf/core/symbol/: expression_symbol.hpp  function.hpp  function_symbol.hpp  function_trait.hpp  intermediate_symbol.hpp  monomial_cell.hpp  owned_symbol.hpp  symbol.hpp  symbol_combination.hpp  symbol_combination_factory.hpp  symbol_id.hpp  symbol_recursion.hpp  symbol_trait.hpp
modules/core/include/ospf/core/token/: token.hpp  token_builder.hpp  token_id.hpp  token_type.hpp
modules/core/include/ospf/core/variable/: auto_variable.hpp  manual_variable.hpp  variable.hpp  variable_builder.hpp  variable_id.hpp  variable_range.hpp  variable_type.hpp
modules/core/tests/: test_core.cpp  test_gurobi_integration.cpp  test_solver.cpp  test_symbol_functions.cpp
modules/example/: CMakeLists.txt
modules/example/include/ospf/example/: common.hpp  core_shortcuts.hpp
modules/example/include/ospf/example/core/: demo1.hpp  demo10.hpp  demo11.hpp  demo12.hpp  demo13.hpp  demo14.hpp  demo15.hpp  demo16.hpp  demo17.hpp  demo2.hpp  demo3.hpp  demo4.hpp  demo5.hpp  demo6.hpp  demo7.hpp  demo8.hpp  demo9.hpp
modules/example/include/ospf/example/framework/: demo1.hpp  demo2.hpp  demo3.hpp  demo4.hpp
modules/example/tests/: test_example.cpp
modules/framework/: CMakeLists.txt
modules/framework/bpp3d/: CMakeLists.txt
modules/framework/bpp3d/tests/: test_bpp3d.cpp
modules/framework/csp1d/: CMakeLists.txt
modules/framework/csp1d/tests/: test_csp1d.cpp
modules/framework/gantt/: CMakeLists.txt
modules/framework/gantt/tests/: test_gantt.cpp
modules/framework/include/ospf/framework/: benders.hpp  column_generation.hpp  command.hpp  context.hpp  decomposition.hpp  event_bus.hpp  handler.hpp  middleware.hpp  observer.hpp  persistence.hpp  pipeline.hpp  running_heart_beat.hpp  strategy.hpp
modules/framework/include/ospf/framework/model/: aggregation.hpp  appendable_pool.hpp  column_generation.hpp  context.hpp  dynamic_lifecycle.hpp  indexed_combination.hpp  model_builder.hpp  model_config.hpp  optional_array.hpp  pipeline.hpp  registration.hpp  shadow_price.hpp
modules/framework/include/ospf/framework/network/: network_edge.hpp  network_graph.hpp  network_node.hpp  response.hpp
modules/framework/include/ospf/framework/persistence/: csv_adapter.hpp  deserializer.hpp  json_adapter.hpp  log_record.hpp  persistence_api_controller.hpp  request.hpp  request_record.hpp  response.hpp  response_record.hpp  serializer.hpp  sql_type.hpp
modules/framework/include/ospf/framework/solver/: benders_decomposition.hpp  column_generation.hpp  column_generation_solver.hpp  core_extensions.hpp  framework_async.hpp  framework_number_aliases.hpp  framework_solve_options.hpp  gurobi_extension.hpp  linear_benders_decomposition_solver.hpp  options.hpp  parallel_column_generation.hpp  parallel_combinatorial_column_generation_solver.hpp  parallel_combinatorial_linear_solver.hpp  parallel_combinatorial_mode.hpp  parallel_combinatorial_quadratic_solver.hpp  parallel_linear.hpp  parallel_mode.hpp  parallel_quadratic.hpp  quadratic_benders_decomposition_solver.hpp  scip_extension.hpp  serial_column_generation.hpp  serial_combinatorial_column_generation_solver.hpp  serial_combinatorial_linear_solver.hpp  serial_combinatorial_quadratic_solver.hpp  serial_linear.hpp  serial_quadratic.hpp  solver_adapter.hpp  solver_factory.hpp
modules/framework/tests/: test_framework.cpp
modules/math/: CMakeLists.txt
modules/math/include/ospf/math/: combinatorics.hpp  fractal.hpp  operator.hpp  ordinary.hpp  trivalent.hpp
modules/math/tests/: test_algebra.cpp  test_chaotic.cpp  test_geometry.cpp  test_symbol.cpp
modules/multiarray/: CMakeLists.txt
modules/multiarray/include/ospf/multiarray/: array.hpp  block.hpp  block_multi_array.hpp  concept.hpp  data_frame.hpp  dummy_index.hpp  einsum.hpp  error.hpp  fast_sum.hpp  index_value.hpp  list_ext.hpp  map_ext.hpp  map_index.hpp  matrix.hpp  multi_array.hpp  multi_array_view.hpp  multimap.hpp  shape.hpp  view.hpp
modules/multiarray/tests/: test_multiarray.cpp
modules/quantities/: CMakeLists.txt
modules/quantities/include/ospf/quantities/: dimension.hpp  error.hpp  functional.hpp  quantity.hpp  scale.hpp  unit.hpp
modules/quantities/tests/: test_quantities.cpp
(+1078 files in other folders)
